--- a/Practica1/css/fontello.css
+++ b/Practica1/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?30829093');
-  src: url('../font/fontello.eot?30829093#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?30829093') format('woff2'),
-       url('../font/fontello.woff?30829093') format('woff'),
-       url('../font/fontello.ttf?30829093') format('truetype'),
-       url('../font/fontello.svg?30829093#fontello') format('svg');
+  src: url('../font/fontello.eot?43914289');
+  src: url('../font/fontello.eot?43914289#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?43914289') format('woff2'),
+       url('../font/fontello.woff?43914289') format('woff'),
+       url('../font/fontello.ttf?43914289') format('truetype'),
+       url('../font/fontello.svg?43914289#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?30829093#fontello') format('svg');
+    src: url('../font/fontello.svg?43914289#fontello') format('svg');
   }
 }
 */
@@ -61,6 +61,9 @@
 .icon-left-big:before { content: '\e803'; } /* '' */
 .icon-right-big:before { content: '\e804'; } /* '' */
 .icon-home:before { content: '\e805'; } /* '' */
+.icon-comment:before { content: '\e806'; } /* '' */
+.icon-to-end-alt:before { content: '\e807'; } /* '' */
+.icon-to-start-alt:before { content: '\e808'; } /* '' */
 .icon-spin2:before { content: '\e831'; } /* '' */
 .icon-angle-circled-up:before { content: '\f139'; } /* '' */
 .icon-thumbs-up-alt:before { content: '\f164'; } /* '' */
