--- a/Practica1/style.css
+++ b/Practica1/style.css
@@ -84,10 +84,44 @@ nav{
 					zoom: 1.1;
 				}
 
+#contenedor-todas-las-recetas{
+	background-color: #f2f1aa;
+	max-width: 1500px;
+	width: auto;
+	height: auto;
+	float: left;
+	font-family: 'Cinzel', serif;
+}
+
+.contenedor-recetas{
+	background-color: #f2f1aa;
+	width: 300px;
+	height: 500px;
+	float: left;
+	margin: 20px;
+	
+}
+		.contenedor-recetas>section{
+
+
+		}
+			.contenedor-recetas>section>header{
+				margin: 0;
+			}
+						.contenedor-recetas>section>header>h3{
+							margin: 0;
+						}	
+
+			.contenedor-recetas>section>img{
+				width: 300px;
+				height: 300px;
+				margin: 0;
+				
+			}
 
 
 
-footer {
+#footer-comun {
     background-color: black;
     clear: both;
     height: 300px;
@@ -140,3 +174,5 @@ footer {
 			
 			color: #fff;
 		}
+
+
