--- a/Practica2/style.css
+++ b/Practica2/style.css
@@ -66,12 +66,12 @@ body{
 	transform: rotate(-90deg);
 }
 
-body>nav{
+#menu{
 	overflow: hidden;
 	border-bottom: .2em solid white;
 }
 	
-	body>nav>ul{
+	#menu>ul{
 		margin: 0;
 		padding: 0;
 		list-style: none;
@@ -83,12 +83,12 @@ body>nav{
 		transition: max-height .5s ease-in-out;
 	}
 
-	body>nav>ul>li{
+	#menu>ul>li{
 		text-align: center;
 		font-weight: bold;
 	}
 
-	body>nav>ul>li>a{
+	#menu>ul>li>a{
 		display: block;
 		text-decoration: none;
 		color:#2d572c;
@@ -96,7 +96,7 @@ body>nav{
 		padding: .4em 0 .4em .2em;
 	}
 
-	body>nav>ul>li:first-of-type>label{
+	#menu>ul>li:first-of-type>label{
 		display: inline-block;
 		font-size: 1.8em;
 		font-weight: bold;
@@ -107,11 +107,11 @@ body>nav{
 		transition: transform .5s linear;
 	}
 
-	body>nav>ul>li>a:hover{
+	#menu>ul>li>a:hover{
 		background-color: #D4D394;
 
 	}
-	body>nav>ul>li>a>span:first-of-type{
+	#menu>ul>li>a>span:first-of-type{
 		margin-right: .5em;
 	}
 /* Footer comun de todas las paginas */
@@ -318,6 +318,13 @@ body>nav{
 	
 	
 /* Comienza la pagina buscar */
+
+body>div>header{
+		height: auto;
+		width: auto;
+		min-height: 150px; 
+		background-image: url(Images/fondo-header.jpg);
+}
 
 #contenedor-buscador-recetas-buscar{
 	background-color: #F3F3CF;
@@ -671,19 +678,16 @@ body>nav{
 }
 
 @media all and (min-width: 480px){
-	body>nav>ul>li:first-of-type{
+	#menu>ul>li:first-of-type{
 		display: none;
 	}
-	body>nav>ul>li{
+	#menu>ul>li{
 		display: inline-block;
 		margin: 0 2%;
 
 	}
 
-	body>nav>ul>li>a{
-
-	}
-	body>nav>ul>li>a>span:nth-of-type(2){
+	#menu>ul>li>a>span:nth-of-type(2){
 		display: none;
 	}
 
@@ -701,11 +705,11 @@ body>nav{
 }
 
 @media all and (min-width: 640px){
-	body>nav>ul>li>a>span:nth-of-type(2){
+	#menu>ul>li>a>span:nth-of-type(2){
 		display: inline-block;
 
 	}
-	body>nav>ul>li{
+	#menu>ul>li{
 		display: inline-block;
 		margin: 0;
 	}
