--- a/Practica2/style.css
+++ b/Practica2/style.css
@@ -648,7 +648,9 @@ body>div>header{
 		}
 		.contenedor-imagen>p>button{
 			background-color: rgba(0,0,0,0);
-			color: #2d572c;
+			color: red;
+			border: 0;
+
 		}
 			#formulario-nueva-receta>button:hover{
 				background-color: #F4EAEA;
