--- a/Practica2/style.css
+++ b/Practica2/style.css
@@ -278,11 +278,25 @@ body{
 #errorLogin{
 	background-color: #F3F3CF;
 	text-align: center;
-	width: 1000px;
-	height: 100%;
-	
+	padding-top: 1em;
 }
-
+	#errorLogin>h2{
+		margin:0;
+		padding-bottom: 1em;
+		font-size: 30px;
+		font-family: 'Cinzel', serif;
+	}
+#registroCorrecto{
+	background-color: #F3F3CF;
+	text-align: center;
+	padding-top: 1em;
+}
+	#registroCorrecto>h2{
+		margin:0;
+		padding-bottom: 1em;
+		font-size: 30px;
+		font-family: 'Cinzel', serif;
+	}
 #contenedor-global-registro{
 
 }
@@ -625,12 +639,16 @@ body>div>header{
 		}
 
 		
-		.contenedor-imagen>input[type="text"]{
+		.contenedor-imagen>textarea{
 			
 			font-family: 'Roboto Condensed', sans-serif;
 			font-size: .8em;
 			padding:0;
 			text-align: left;
+			min-width: 200px;
+			max-width: 200px;
+			min-height: 50px;
+			max-height: 50px;
 		}
 
 		#foto{
@@ -658,7 +676,17 @@ body>div>header{
 			}
 
 
-
+#errorImagen{
+	background-color: #F3F3CF;
+	text-align: center;
+	padding-top: 1em;
+}
+	#errorImagen>h2{
+		margin:0;
+		padding-bottom: 1em;
+		font-size: 30px;
+		font-family: 'Cinzel', serif;
+	}
 /* Parte del acerca de */
 
 #contenedor-acercade{
